--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,7 @@ a:hover {
 
 .send-review {
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  margin: 1em;
 }
 
 .malav-logo {
@@ -704,4 +705,24 @@ header.masthead .post-heading .meta a {
     margin: 0px;
     padding: 20px
   }
+}
+
+
+.home-style-images{
+  padding-right: 2%;
+  width: 25%;
+  height: 15%;
+  float: left;
+}
+
+.staging-block{
+   width: 100%;
+   padding: 10px;
+   border: 2px solid gray;
+   margin: 0;
+}
+
+
+.staging-text{
+  font-size: 1.2rem;
 }
